--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- FloatingActionButton works better with a CoordinatorLayout -->
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,18 +13,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <!--TextView, ListHeader instead
             android:id="@+id/main_heading_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bookstore"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge" /-->
 
-        <Button
+        <!--Button, Floating Action Button used instead
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="addBook"
-            android:text="Add book" />
+            android:text="Add book" /-->
 
         <ListView
             android:id="@+id/main_books_listview"
@@ -35,6 +37,7 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <!-- FloatingActionButton works better with a CoordinatorLayout -->
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +47,4 @@
         app:elevation="6dp"
         app:pressedTranslationZ="12dp" />
 
-
 </android.support.design.widget.CoordinatorLayout>
-
