--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:layout_height="match_parent"
     tools:context="dk.easj.anbo.bookstorerest.MainActivity">
 
+    <ProgressBar
+        android:layout_gravity="center"
+        android:id="@+id/mainProgressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,6 +31,8 @@
             android:layout_height="wrap_content"
             android:onClick="addBook"
             android:text="Add book" /-->
+
+
 
         <ListView
             android:id="@+id/main_books_listview"
